# killifish

./: .editorconfig  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/hooks/: index.ts  useModal.ts  useName.ts  useSearch.ts
src/libs/: cache.ts  classNames.ts  constant.ts  index.ts  persist.ts  requester.ts  searcher.ts
src/pages/: Homepage.tsx  Management.tsx  NotFound.tsx  Persons.tsx  Recordings.tsx  Records.tsx  Routine.tsx  SignIn.tsx  Tanks.tsx  Todos.tsx  Workspace.tsx  index.ts
src/stores/: profile.ts  search.ts  ui.ts
src/styles/: base.css  index.css  utilties.css
src/types/: profile.d.ts  record.d.ts  recording.d.ts  tank.d.ts  todo.d.ts
src/widgets/: AgeChart.tsx  DatePicker.tsx  Icons.tsx  Illustration.tsx  Inputs.tsx  MenuIcon.tsx  Modal.tsx  Pagination.tsx  PieChart.tsx  PopFilter.tsx  Profile.tsx  RatioChart.tsx  ScatterChart.tsx  Select.tsx  StreamChart.tsx  Table.tsx  TankCard.tsx  TankProfile.tsx  TopBar.tsx  index.ts
